--- a/app/index.html
+++ b/app/index.html
@@ -138,57 +138,69 @@
           </div>
       </section>
 
-      <section>
-        <div>
-          <article>
-            <h2>Lorem Ipsum</h2>
+      <section class="l-sub-home u-mb--large">
+        <div class="l-sub-home__blog">
+          <h2 class="sub-header">Lorem Ipsum</h2>
 
-            <div>
-              <article>
-                <figure>
-                  <img src="" alt="">
-                </figure>
-                <header>
-                  <h4>article title</h4>
-                </header>
-              </article>
+          <div class="l-article-container">
+            <article class="blog-card">
+              <figure class="blog-card__img-col">
+                <img class="blog-card__img" src="http://lorempicsum.com/futurama/110/100/2" alt="">
+              </figure>
+              <header class="blog-card__header">
+                <h4 class="blog-card__title">
+                  <a href="#" class="blog-card__link">article title</a>
+                </h4>
+              </header>
+            </article>
+          </div>
 
-              <article>
-                <figure>
-                  <img src="" alt="">
-                </figure>
-                <header>
-                  <h4>article title</h4>
-                </header>
-              </article>
+          <div class="l-article-container">
+            <article class="blog-card">
+              <figure class="blog-card__img-col">
+                <img class="blog-card__img" src="http://lorempicsum.com/futurama/110/100/3" alt="">
+              </figure>
+              <header class="blog-card__header">
+                <h4 class="blog-card__title">
+                  <a href="#" class="blog-card__link">article title</a>
+                </h4>
+              </header>
+            </article>
+          </div>
 
-              <article>
-                <figure>
-                  <img src="" alt="">
-                </figure>
-                <header>
-                  <h4>article title</h4>
-                </header>
-              </article>
+          <div class="l-article-container">
+            <article class="blog-card">
+              <figure class="blog-card__img-col">
+                <img class="blog-card__img" src="http://lorempicsum.com/futurama/110/100/6" alt="">
+              </figure>
+              <header class="blog-card__header">
+                <h4 class="blog-card__title">
+                  <a href="#" class="blog-card__link">article title</a>
+                </h4>
+              </header>
+            </article>
+          </div>
 
-              <article>
-                <figure>
-                  <img src="" alt="">
-                </figure>
-                <header>
-                  <h4>article title</h4>
-                </header>
-              </article>
-            </div>
+          <div class="l-article-container">
+            <article class="blog-card">
+              <figure class="blog-card__img-col">
+                <img class="blog-card__img" src="http://lorempicsum.com/futurama/110/100/8" alt="">
+              </figure>
+              <header class="blog-card__header">
+                <h4 class="blog-card__title">
+                  <a href="#" class="blog-card__link">article title</a>
+                </h4>
+              </header>
+            </article>
+          </div>
+        </div>
 
-            <div>
-              <h2>Lorem Ipsum</h2>
+        <div class="l-sub-home__video">
+          <h2 class="sub-header">Lorem Ipsum</h2>
 
-              <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/vt47bQFkp4I" frameborder="0" allowfullscreen></iframe>
-              </div>
-            </div>
-          </article>
+          <div>
+            <iframe width="560" src="https://www.youtube.com/embed/vt47bQFkp4I" frameborder="0" allowfullscreen></iframe>
+          </div>
         </div>
       </section>
     </main>
